--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.0",
+    "bmi": "file:",
     "expo": "~52.0.19",
+    "expo-location": "~18.0.4",
+    "expo-module-scripts": "^4.0.2",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-maps": "^1.20.1",
+    "react-native-reanimated": "^3.16.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
